--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+h1, h2, h3, h4, p {
+  color: #333;
+}
+
 a {
   color: inherit;
   text-decoration: none;
